# vn

./: .gitattributes  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: vndb.rs
crates/core/src/http/: mod.rs
crates/core/src/http/query/: json.rs  url.rs
crates/core/src/http/request/: get.rs
crates/core/src/model/: auth_info.rs  mod.rs  producer.rs  release.rs  staff.rs
crates/core/tests/: character.rs  endpoint.rs  producer.rs  release.rs  schema.rs  staff.rs  stats.rs  tag.rs  trait.rs  user.rs  visual_novel.rs
crates/vn/: Cargo.toml
crates/vn/src/: lib.rs  vndb.rs
crates/vn/src/http/: mod.rs
crates/vn/src/http/query/: mod.rs
crates/vn/src/http/request/: post.rs
crates/vn/src/macros/: field_set.rs  id_newtype.rs
crates/vn/src/model/: character.rs  mod.rs  producer.rs  release.rs  schema.rs  staff.rs  tag.rs  trait.rs  user.rs  visual_novel.rs
crates/vn/tests/: character.rs  producer.rs  release.rs  schema.rs  user.rs  visual_novel.rs
scripts/: test.ps1
src/: error.rs  lib.rs  main.rs  vndb.rs
src/http/: mod.rs
src/http/query/: json.rs  mod.rs  url.rs
src/http/request/: get.rs  mod.rs  post.rs
src/macros/: field_set.rs  id_newtype.rs  mod.rs  string_set.rs
src/model/: auth_info.rs  character.rs  mod.rs  producer.rs  release.rs  schema.rs  staff.rs  stats.rs  tag.rs  trait.rs  user.rs  visual_novel.rs
tests/: character.rs  endpoint.rs  producer.rs  release.rs  schema.rs  staff.rs  stats.rs  tag.rs  trait.rs  user.rs  visual_novel.rs
