[package]
name = "vn"
version = "0.4.0"
description = "VNDB for Rust"
homepage = "https://github.com/ferreira-tb/vn"
repository = "https://github.com/ferreira-tb/vn"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2024"
rust-version = "1.85"
keywords = ["api", "http", "novel", "visual", "vndb"]

[package.metadata.docs.rs]
no-default-features = true
features = ["random", "regex"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
async_fn_in_trait = "allow"
unfulfilled_lint_expectations = "deny"
variant_size_differences = "warn"

[lints.clippy]
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
map_unwrap_or = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_borrow = "deny"
needless_for_each = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
unnecessary_safety_comment = "deny"
unsafe_derive_deserialize = "allow"
useless_conversion = "deny"

[lints.clippy.pedantic]
level = "deny"
priority = -1

[dependencies]
bon = "3.6"
futures = "0.3"
http = "1.3"
itertools = "0.14"
remain = "0.2"
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[dependencies.rand]
version = "0.9"
optional = true

[dependencies.regex]
version = "1.11"
optional = true

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.specta]
version = "=2.0.0-rc.22"
optional = true
features = ["derive", "serde", "serde_json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.strum]
version = "0.27"
features = ["derive"]

[dependencies.tokio]
version = "1.44"
features = ["full"]

[features]
random = ["dep:rand"]
regex = ["dep:regex"]
specta = ["dep:specta"]
