[package]
name = "vn"
version = "0.6.3"
description = "VNDB for Rust"
homepage = "https://github.com/ferreira-tb/vn"
repository = "https://github.com/ferreira-tb/vn"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
edition = "2024"
rust-version = "1.91"
readme = "./README.md"
keywords = ["api", "http", "novel", "visual", "vndb"]

[package.metadata.docs.rs]
no-default-features = true

[dependencies]
bon = "3.8"
futures = "0.3"
http = "1.3"
itertools = "0.14"
regex = "1.12"
remain = "0.2"
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[dependencies.derive_more]
version = "2.0"
features = ["deref", "display", "from", "into"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.specta]
version = "=2.0.0-rc.22"
optional = true
features = ["derive", "serde", "serde_json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.strum]
version = "0.27"
features = ["derive"]

[dependencies.tokio]
version = "1.48"
default-features = false

[dev-dependencies.tokio]
version = "1.48"
features = ["macros", "test-util"]

[features]
specta = ["dep:specta"]

[lints.rust]
async_fn_in_trait = "allow"
dangling_pointers_from_temporaries = "deny"
unfulfilled_lint_expectations = "deny"
unsafe_op_in_unsafe_fn = "deny"
variant_size_differences = "warn"

[lints.clippy]
clone_on_ref_ptr = "deny"
collapsible_if = "allow"
dbg_macro = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
large_enum_variant = "deny"
map_unwrap_or = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_borrow = "deny"
needless_for_each = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
unnecessary_safety_comment = "deny"
unsafe_derive_deserialize = "allow"
useless_conversion = "deny"

[lints.clippy.pedantic]
level = "deny"
priority = -1
